--- a/src/PrestaShopBundle/Resources/config/services/core/grid/doctrine_query_builder.yml
+++ b/src/PrestaShopBundle/Resources/config/services/core/grid/doctrine_query_builder.yml
@@ -489,3 +489,10 @@ services:
       - '@prestashop.core.query.doctrine_search_criteria_applicator'
       - "@=service('prestashop.adapter.legacy.context').getContext().employee.id_lang"
     public: false
+
+  PrestaShop\PrestaShop\Core\Grid\Query\SearchAliasesQueryBuilder:
+    class: 'PrestaShop\PrestaShop\Core\Grid\Query\SearchAliasesQueryBuilder'
+    parent: 'prestashop.core.grid.abstract_query_builder'
+    arguments:
+      - '@prestashop.core.query.doctrine_search_criteria_applicator'
+    public: false
