--- a/src/PrestaShopBundle/Resources/config/services/core/grid/grid_data_factory.yml
+++ b/src/PrestaShopBundle/Resources/config/services/core/grid/grid_data_factory.yml
@@ -602,3 +602,11 @@ services:
     arguments:
       - '@prestashop.core.grid.data.factory.tax_rule'
       - '@translator'
+
+  prestashop.core.grid.data.factory.search_aliases:
+    class: 'PrestaShop\PrestaShop\Core\Grid\Data\Factory\DoctrineGridDataFactory'
+    arguments:
+      - '@PrestaShop\PrestaShop\Core\Grid\Query\SearchAliasesQueryBuilder'
+      - '@prestashop.core.hook.dispatcher'
+      - '@prestashop.core.grid.query.doctrine_query_parser'
+      - 'search_aliases'
