fix grid view and add bulk action

--- a/src/PrestaShopBundle/Resources/config/routing/admin/configure/shop_parameters/search_preferences.yml
+++ b/src/PrestaShopBundle/Resources/config/routing/admin/configure/shop_parameters/search_preferences.yml
@@ -1,8 +1,16 @@
-admin_search:
+admin_search_index:
   path: /
   methods: [ GET ]
   defaults:
     _controller: 'PrestaShopBundle\Controller\Admin\Configure\ShopParameters\SearchController::indexAction'
     _legacy_controller: AdminSearchConf
     _legacy_link: AdminSearchConf
-#    _legacy_feature_flag: search
+    _legacy_feature_flag: search
+
+admin_alias_delete_bulk:
+  path: /delete/bulk
+  methods: [ POST ]
+  defaults:
+    _controller: 'PrestaShopBundle\Controller\Admin\Configure\ShopParameters\SearchController::deleteBulkAction'
+    _legacy_controller: AdminSearchConf
+    _legacy_link: AdminSearchConf:submitBulkdeletealias
