--- a/src/PrestaShopBundle/Resources/config/services/core/grid/doctrine_query_builder.yml
+++ b/src/PrestaShopBundle/Resources/config/services/core/grid/doctrine_query_builder.yml
@@ -490,8 +490,8 @@ services:
       - "@=service('prestashop.adapter.legacy.context').getContext().employee.id_lang"
     public: false
 
-  PrestaShop\PrestaShop\Core\Grid\Query\SearchAliasesQueryBuilder:
-    class: 'PrestaShop\PrestaShop\Core\Grid\Query\SearchAliasesQueryBuilder'
+  PrestaShop\PrestaShop\Core\Grid\Query\AliasQueryBuilder:
+    class: 'PrestaShop\PrestaShop\Core\Grid\Query\AliasQueryBuilder'
     parent: 'prestashop.core.grid.abstract_query_builder'
     arguments:
       - '@prestashop.core.query.doctrine_search_criteria_applicator'
