--- a/src/PrestaShopBundle/Resources/config/services/core/grid/grid_factory.yml
+++ b/src/PrestaShopBundle/Resources/config/services/core/grid/grid_factory.yml
@@ -480,10 +480,10 @@ services:
       - '@prestashop.core.grid.filter.form_factory'
       - '@prestashop.core.hook.dispatcher'
 
-  prestashop.core.grid.factory.search_alias:
+  prestashop.core.grid.factory.alias:
     class: 'PrestaShop\PrestaShop\Core\Grid\GridFactory'
     arguments:
-      - '@prestashop.core.grid.definition.factory.search_aliases'
-      - '@prestashop.core.grid.data.factory.search_aliases'
+      - '@prestashop.core.grid.definition.factory.alias'
+      - '@prestashop.core.grid.data.factory.alias'
       - '@prestashop.core.grid.filter.form_factory'
       - '@prestashop.core.hook.dispatcher'
