--- a/src/PrestaShopBundle/Resources/config/routing/admin/configure/shop_parameters/search_preferences.yml
+++ b/src/PrestaShopBundle/Resources/config/routing/admin/configure/shop_parameters/search_preferences.yml
@@ -8,21 +8,12 @@ admin_search_index:
     # _legacy_link: AdminSearchConf
     # _legacy_feature_flag: search
 
-admin_contacts_search:
+admin_alias_search:
   path: /
   methods: [ POST ]
   defaults:
     _controller: PrestaShopBundle\Controller\Admin\CommonController::searchGridAction
-    gridDefinitionFactoryServiceId: prestashop.core.grid.definition.factory.contacts
+    gridDefinitionFactoryServiceId: prestashop.core.grid.definition.factory.alias
     redirectRoute: admin_search_index
     _legacy_controller: AdminSearchConf
-#    _legacy_link: AdminSearchConf:submitFiltercontact
-
-
-admin_alias_delete_bulk:
-  path: /delete/bulk
-  methods: [ POST ]
-  defaults:
-    _controller: 'PrestaShopBundle\Controller\Admin\Configure\ShopParameters\SearchController::deleteBulkAction'
-    _legacy_controller: AdminSearchConf
-    # _legacy_link: AdminSearchConf:submitBulkdeletealias
+#    _legacy_link: AdminSearchConf:submitFilteralias
