--- a/src/PrestaShopBundle/Resources/config/services/core/grid/grid_definition_factory.yml
+++ b/src/PrestaShopBundle/Resources/config/services/core/grid/grid_definition_factory.yml
@@ -387,7 +387,7 @@ services:
     public: false
     autowire: true
 
-  prestashop.core.grid.definition.factory.alias:
-    class: 'PrestaShop\PrestaShop\Core\Grid\Definition\Factory\AliasGridDefinitionFactory'
+  PrestaShop\PrestaShop\Core\Grid\Definition\Factory\AliasGridDefinitionFactory:
     parent: 'prestashop.core.grid.definition.factory.abstract_grid_definition'
-    public: true
+    public: false
+    autowire: true
