--- a/composer.json
+++ b/composer.json
@@ -49,6 +49,7 @@
         "lcobucci/jwt": "dev-3.4.6-patch as 3.4.6",
         "league/oauth2-server": "^8.3",
         "league/tactician-bundle": "^1.4",
+        "liip/imagine-bundle": "^2.10",
         "martinlindhe/php-mb-helpers": "^0.1.6",
         "matthiasmullie/minify": "~1.3.0",
         "mobiledetect/mobiledetectlib": "~2.8.34",
