--- a/src/PrestaShopBundle/Resources/config/services_dev/bundle/command.yml
+++ b/src/PrestaShopBundle/Resources/config/services_dev/bundle/command.yml
@@ -72,3 +72,5 @@ services:
   PrestaShopBundle\Command\ShopCreatorCommand:
     autowire: true
     autoconfigure: true
+    arguments:
+      $dbPrefix: !php/const _DB_PREFIX_
