--- a/src/PrestaShopBundle/Resources/config/services/bundle/form/form_type.yml
+++ b/src/PrestaShopBundle/Resources/config/services/bundle/form/form_type.yml
@@ -774,7 +774,7 @@ services:
   PrestaShopBundle\Form\Admin\Type\CurrencyChoiceType:
   PrestaShopBundle\Form\Admin\Type\TaxInclusionChoiceType:
   PrestaShopBundle\Form\Admin\Type\ShippingInclusionChoiceType:
-  PrestaShopBundle\Form\Admin\Type\SearchProductType:
+  PrestaShopBundle\Form\Admin\Type\ProductSearchType:
 
   # Deprecated
   form.type.sell.product.event_listener.categories_listener:
