--- a/src/PrestaShopBundle/Resources/config/services/core/form/form_data_handler.yml
+++ b/src/PrestaShopBundle/Resources/config/services/core/form/form_data_handler.yml
@@ -113,10 +113,9 @@ services:
       - '@prestashop.core.command_bus'
       - '@prestashop.adapter.image.uploader.supplier_image_uploader'
 
-  prestashop.core.form.identifiable_object.data_handler.feature_form_data_handler:
-    class: 'PrestaShop\PrestaShop\Core\Form\IdentifiableObject\DataHandler\FeatureFormDataHandler'
-    arguments:
-      - '@prestashop.core.command_bus'
+  PrestaShop\PrestaShop\Core\Form\IdentifiableObject\DataHandler\FeatureFormDataHandler:
+    autowire: true
+    public: false
 
   prestashop.core.form.identifiable_object.data_handler.order_message_form_data_handler:
     class: 'PrestaShop\PrestaShop\Core\Form\IdentifiableObject\DataHandler\OrderMessageFormDataHandler'
