--- a/src/PrestaShopBundle/Resources/config/services/core/grid/doctrine_query_builder.yml
+++ b/src/PrestaShopBundle/Resources/config/services/core/grid/doctrine_query_builder.yml
@@ -516,8 +516,8 @@ services:
 
   PrestaShop\PrestaShop\Core\Grid\Query\FeatureQueryBuilder:
     parent: 'prestashop.core.grid.abstract_query_builder'
+    autowire: true
     public: false
     arguments:
-      - '@prestashop.core.query.doctrine_search_criteria_applicator'
-      - "@=service('prestashop.adapter.legacy.context').getContext().shop.getContextListShopID()"
-      - "@=service('prestashop.adapter.legacy.context').getContext().language.id"
+      $searchCriteriaApplicator: '@prestashop.core.query.doctrine_search_criteria_applicator'
+      $contextLangId: "@=service('prestashop.adapter.legacy.context').getContext().language.id"
