fix autowiring and move interface method

--- a/src/PrestaShopBundle/Resources/config/services/adapter/feature.yml
+++ b/src/PrestaShopBundle/Resources/config/services/adapter/feature.yml
@@ -64,6 +64,8 @@ services:
     autowire: true
     public: false
 
+  PrestaShop\PrestaShop\Adapter\Feature\Validate\FeatureValidator: ~
+
   PrestaShop\PrestaShop\Adapter\Feature\Validate\FeatureValueValidator: ~
 
   PrestaShop\PrestaShop\Adapter\Feature\Repository\FeatureValueRepository:
