--- a/src/PrestaShopBundle/Resources/config/services/adapter/services.yml
+++ b/src/PrestaShopBundle/Resources/config/services/adapter/services.yml
@@ -85,6 +85,7 @@ services:
     class: PrestaShop\PrestaShop\Adapter\Shop\Context
 
   PrestaShop\PrestaShop\Core\Multistore\MultistoreContextCheckerInterface: '@prestashop.adapter.shop.context'
+  PrestaShop\PrestaShop\Core\Shop\ShopContextInterface: '@prestashop.adapter.shop.context'
   PrestaShop\PrestaShop\Core\Shop\ShopConstraintContextInterface: '@prestashop.adapter.shop.context'
 
   PrestaShop\PrestaShop\Adapter\ImageManager:
