--- a/src/PrestaShopBundle/Resources/config/routing/admin/sell/catalog/features.yml
+++ b/src/PrestaShopBundle/Resources/config/routing/admin/sell/catalog/features.yml
@@ -50,3 +50,10 @@ admin_features_export:
   defaults:
     _controller: 'PrestaShopBundle\Controller\Admin\Sell\Catalog\FeatureController::exportAction'
     _legacy_controller: AdminFeatures
+
+admin_features_update_position:
+  path: /update-position
+  methods: [ POST ]
+  defaults:
+    _controller: PrestaShopBundle\Controller\Admin\Sell\Catalog\FeatureController::updatePositionAction
+    _legacy_controller: AdminFeatures
