move updatepositionAction to commonController

--- a/src/PrestaShopBundle/Resources/config/routing/admin/sell/catalog/features.yml
+++ b/src/PrestaShopBundle/Resources/config/routing/admin/sell/catalog/features.yml
@@ -55,5 +55,7 @@ admin_features_update_position:
   path: /update-position
   methods: [ POST ]
   defaults:
-    _controller: PrestaShopBundle\Controller\Admin\Sell\Catalog\FeatureController::updatePositionAction
+    _controller: PrestaShopBundle\Controller\Admin\CommonController::updatePositionAction
     _legacy_controller: AdminFeatures
+    position_definition: prestashop.core.grid.feature.position_definition
+    redirect_route: admin_features_index
