--- a/src/PrestaShopBundle/Resources/config/routing/admin/sell/catalog/features.yml
+++ b/src/PrestaShopBundle/Resources/config/routing/admin/sell/catalog/features.yml
@@ -5,7 +5,8 @@ admin_features_index:
   defaults:
     _controller: PrestaShopBundle\Controller\Admin\Sell\Catalog\FeatureController::indexAction
     _legacy_controller: AdminFeatures
-    # _legacy_link: AdminFeatures
+    _legacy_link: AdminFeatures
+    _legacy_feature_flag: feature
 
 admin_features_horizontal_index:
   path: /horizontal
@@ -30,7 +31,8 @@ admin_features_add:
   defaults:
     _controller: PrestaShopBundle\Controller\Admin\Sell\Catalog\FeatureController::createAction
     _legacy_controller: AdminFeatures
-    # _legacy_link: AdminFeatures:addfeature
+    _legacy_link: AdminFeatures:addfeature
+    _legacy_feature_flag: feature
 
 admin_features_edit:
   path: /{featureId}/edit
@@ -38,7 +40,8 @@ admin_features_edit:
   defaults:
     _controller: PrestaShopBundle\Controller\Admin\Sell\Catalog\FeatureController::editAction
     _legacy_controller: AdminFeatures
-    # _legacy_link: AdminFeatures:updatefeature
+    _legacy_link: AdminFeatures:updatefeature
+    _legacy_feature_flag: feature
     _legacy_parameters:
       id_feature: featureId
   requirements:
