feature export action

--- a/src/PrestaShopBundle/Resources/config/routing/admin/sell/catalog/features.yml
+++ b/src/PrestaShopBundle/Resources/config/routing/admin/sell/catalog/features.yml
@@ -43,3 +43,10 @@ admin_features_edit:
       id_feature: featureId
   requirements:
     featureId: \d+
+
+admin_features_export:
+  path: /export
+  methods: GET
+  defaults:
+    _controller: 'PrestaShopBundle\Controller\Admin\Sell\Catalog\FeatureController::exportAction'
+    _legacy_controller: AdminFeatures
