--- a/src/PrestaShopBundle/Resources/config/routing/admin/sell/catalog/features.yml
+++ b/src/PrestaShopBundle/Resources/config/routing/admin/sell/catalog/features.yml
@@ -62,3 +62,12 @@ admin_features_update_position:
     _legacy_controller: AdminFeatures
     position_definition: prestashop.core.grid.feature.position_definition
     redirect_route: admin_features_index
+
+admin_features_delete:
+  path: /{featureId}/delete
+  methods: [ POST, DELETE ]
+  defaults:
+    _controller: PrestaShopBundle\Controller\Admin\Sell\Catalog\FeatureController::deleteAction
+    _legacy_controller: AdminFeatures
+  requirements:
+    featureId: \d+
