--- a/src/PrestaShopBundle/Resources/config/routing/admin/sell/catalog/features.yml
+++ b/src/PrestaShopBundle/Resources/config/routing/admin/sell/catalog/features.yml
@@ -60,5 +60,5 @@ admin_features_update_position:
   defaults:
     _controller: PrestaShopBundle\Controller\Admin\CommonController::updatePositionAction
     _legacy_controller: AdminFeatures
-    position_definition: prestashop.core.grid.feature.position_definition
+    position_definition: PrestaShop\PrestaShop\Core\Grid\Position\PositionDefinition
     redirect_route: admin_features_index
