--- a/src/PrestaShopBundle/Resources/config/services/core/product.yml
+++ b/src/PrestaShopBundle/Resources/config/services/core/product.yml
@@ -7,6 +7,7 @@ services:
     arguments:
       - '@translator'
       - '@prestashop.core.admin.data_provider.product_interface'
+    deprecated: ~
 
   prestashop.core.product.csv_exporter:
     alias: PrestaShop\PrestaShop\Core\Product\ProductCsvExporter
