Deprecate services only used in left controllers related to old product page

--- a/src/PrestaShopBundle/Resources/config/services/adapter/data_provider.yml
+++ b/src/PrestaShopBundle/Resources/config/services/adapter/data_provider.yml
@@ -44,6 +44,7 @@ services:
 
   prestashop.adapter.data_provider.attachment:
     class: PrestaShop\PrestaShop\Adapter\Product\AttachmentDataProvider
+    deprecated: ~
 
   prestashop.adapter.data_provider.feature:
     class: PrestaShop\PrestaShop\Adapter\Feature\FeatureDataProvider
